# TwistedWiSP

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  run_tests.py
gui/: .gitignore  flow_graph_node.gd  flow_graph_node_selector.gd  flow_graph_node_selector.tscn  flow_graph_view.gd  flow_graph_view.tscn  icon.svg.import  project.godot  twisted_wisp.gd  twisted_wisp.tscn  wisp.ini.example
src/: main.rs
src/audio/: device.rs
src/wisp/: context.rs  flow.rs  function.rs  ir.rs  mod.rs  runtime.rs
src/wisp/compiler/: builder.rs  error.rs  function_context.rs  mod.rs  module_context.rs  processor.rs
tests/: test_twisted_wisp.py  twisted_wisp.py
wisp/: Cargo.toml  build.rs  run_tests.py
wisp/core/: core.twf  phasor.twf
wisp/src/: builtin_function.rs  c_api.rs  code_function.rs  context.rs  flow.rs  flow_function.rs  function.rs  ir.rs  lib.rs  main.rs  math_function.pest  math_function.rs  protocol.rs  runner.rs  server.rs
wisp/src/audio/: device.rs
wisp/src/compiler/: builder.rs  data_layout.rs  dependency_calculator.rs  error.rs  mod.rs  module_context.rs  processor.rs
wisp/src/core/: builtin_function.rs  code_function.rs  context.rs  flow_function.rs  function.rs  math_function.pest  math_function.rs
wisp/src/ir/: function.rs  mod.rs
wisp/src/protocol/: client.rs  commands.rs
wisp/src/runner/: context.rs  engine.rs  main.rs  mod.rs  runtime.rs  server.rs
wisp/src/runner/audio/: device.rs
wisp/src/runner/compiler/: builder.rs  data_layout.rs  function_context.rs  mod.rs  module_context.rs  processor.rs
wisp/src/utils/: dep_prop.rs  mod.rs
wisp/src/wisp/: context.rs  execution_context.rs  flow.rs  function.rs  ir.rs  mod.rs  runtime.rs
wisp/src/wisp/compiler/: builder.rs  data_layout.rs  function_context.rs  mod.rs  module_context.rs
wisp_cli/: Cargo.toml
wisp_cli/src/: main.rs
wisp_gui/: .gitignore  beat.twf  beat2.twf  beat3.twf  control.twf  flow_graph_node.gd  flow_graph_node.tscn  flow_graph_node_buffer.gd  flow_graph_node_buffer.tscn  flow_graph_node_button.gd  flow_graph_node_button.tscn  flow_graph_node_h_slider.gd  flow_graph_node_h_slider.tscn  flow_graph_node_input_toggle.gd  flow_graph_node_input_toggle.tscn  flow_graph_node_selector.gd  flow_graph_node_watch.gd  flow_graph_node_watch.tscn  flow_graph_node_watch_graph.gd  flow_graph_node_watch_graph.tscn  flow_graph_view.gd  flow_graph_view.tscn  freeze.twf  phasor_test.twf  project.godot  property_inspector.gd  property_inspector.tscn  property_number.gd  property_number.tscn  sine.twf  test.twf  twisted_wisp.gd  twisted_wisp.gdextension  twisted_wisp.tscn  wisp.ini.example  wisp.toml.example
wisp_gui_egui/: Cargo.toml
wisp_gui_egui/src/: app.rs  main.rs
wisp_gui_extension/: Cargo.toml
wisp_gui_extension/src/: extension.rs  lib.rs  logger.rs  twisted_wisp.rs  twisted_wisp_flow.rs  twisted_wisp_flow_node.rs
wisp_gui_iced/: .gitignore  Cargo.toml  build.rs
wisp_gui_iced/src/: config.rs  flow_graph_view.rs  main.rs  pannable.rs
wisp_ir/: Cargo.toml
wisp_ir/src/: function.rs  ir.rs
wisp_protocol/: Cargo.toml
wisp_protocol/src/: client.rs  commands.rs
wisp_runner/: Cargo.toml
wisp_runner/src/: context.rs  main.rs  runtime.rs  server.rs
wisp_runner/src/audio/: device.rs
wisp_runner/src/compiler/: builder.rs  data_layout.rs  mod.rs  module_context.rs  processor.rs
wisp_runner/src/midi/: midi_in.rs  mod.rs
