[package]
name = "twisted-wisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
logos = "0.14.0"
pest = "2.7"
pest_derive = "2.7"
petgraph = "0.6.4"
twisted-wisp-ir = { path = "../wisp_ir" }
