[package]
name = "twisted-wisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ===== Core =====
indexmap = { version = "2.2", features = ["serde"] }
lazy_static = "1.4"
logos = "0.14.0"
pest = "2.7"
pest_derive = "2.7"
petgraph = "0.6.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# ===== Runner =====
# Audio
cpal = "0.15.3"
hound = "3.5"
# MIDI
midly = "0.5"
midir = "0.10"
# Core
crossbeam = "0.8"
inkwell = { version = "0.5.0", features = ["llvm17-0-prefer-dynamic"] }
rand = "0.8"
# Utilities
env_logger = "0.11"
log = "0.4"
ringbuffer = "0.15.0"
string-error = "0.1.0"
thiserror = "1"

[build-dependencies]
cbindgen = "0.27"
