[package]
name = "twisted-wisp-gui-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# NOTE: Newer commits make the extension fail to load, maybe because of Godot 4.2.1?
log = "0.4"
godot = { git = "https://github.com/godot-rust/gdext", rev = "3cab21e486c25a2e3f3e4b1de3d9977f10f94c37" }
twisted-wisp = { path = "../wisp" }
twisted-wisp-ir = { path = "../wisp_ir" }
twisted-wisp-protocol = { path = "../wisp_protocol" }
