[package]
name = "twisted-wisp-gui-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
godot = { git = "https://github.com/godot-rust/gdext" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
twisted-wisp = { path = "../wisp" }
twisted-wisp-ir = { path = "../wisp_ir" }
twisted-wisp-protocol = { path = "../wisp_protocol" }
