[package]
name = "twisted-wisp-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twisted-wisp-ir = { path = "../wisp_ir" }
