[package]
name = "twisted-wisp-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Audio
cpal = "0.15.3"
# CLI
clap = { version = "4", features = ["derive"] }
# Core
inkwell = { version = "0.4.0", features = ["llvm17-0-prefer-dynamic"] }
# Utilities
log = "0.4"
ringbuffer = "0.15.0"
stderrlog = "0.6"
thiserror = "1"
# WiSP
twisted-wisp = { path = "../wisp" }
twisted-wisp-ir = { path = "../wisp_ir" }
twisted-wisp-protocol = { path = "../wisp_protocol" }
