[package]
name = "twisted-wisp-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Audio
cpal = "0.15.3"
hound = "3.5"
# MIDI
midly = "0.5"
midir = "0.10"
# CLI
clap = { version = "4", features = ["derive"] }
# Core
crossbeam = "0.8"
inkwell = { version = "0.5.0", features = ["llvm17-0-prefer-dynamic"] }
rand = "0.8"
# Utilities
env_logger = "0.11"
log = "0.4"
ringbuffer = "0.15.0"
string-error = "0.1.0"
thiserror = "1"
# WiSP
twisted-wisp = { path = "../wisp" }
twisted-wisp-ir = { path = "../wisp_ir" }
twisted-wisp-protocol = { path = "../wisp_protocol" }
